[Styling] Unify card heights across row and prevent overflow (#1)
- Prevented overflow from card content by removing fixed height.
- Unified card height by applying background to the whole card rather than content only.

Reviewed-on: https://git.nova-vps.ml/lexisother/AspidaWeb/pulls/1
Co-committed-by: Loïc Bréard <hades785@gmail.com>

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -57,6 +57,7 @@ a {
     .card {
         border: 1px solid black;
         margin-bottom: 20px;
+        background-color: #303030;
 
         .cardHeader {
             font-size: 30px;
@@ -82,8 +83,6 @@ a {
             }
         }
         .cardContent {
-            height: 6rem;
-            background-color: #303030;
             text-align: center;
             padding-top: 5px;
             padding-bottom: 10px;
